--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- Main CSS -->
     <link href="assets/css/theme.min.css" rel="stylesheet">
 
-    <title>RF Online</title>
+    <title>RF Programs</title>
 </head>
 
 <body>
@@ -191,7 +191,7 @@
 
                             <!--Shape Image with mask-->
                             <div class="bg-mask">
-                                <img src="assets/Fotos/_CHR6377-Mejorado-NR.jpg" class="mask-squircle mask-image"
+                                <img src="assets/img/_CHR6377-Mejorado-NR.jpg" class="mask-squircle mask-image"
                                     alt="">
                             </div>
                         </div>
@@ -264,7 +264,7 @@
                         <a href="#!"
                             class="d-block rounded-3 text-reset position-relative overflow-hidden card-hover hover-lift-lg hover-shadow">
                             <div class="overflow-hidden bg-gradient-light position-relative">
-                                <img src="assets/Fotos/_CHR6253-Mejorado-NR.jpg" alt="" class="img-fluid img-zoom">
+                                <img src="assets/img/_CHR6253-Mejorado-NR.jpg" alt="" class="img-fluid img-zoom">
                                 <div
                                     class="card-overlay py-4 px-3 text-white d-flex align-items-end justify-content-center">
                                     <ul class="list-unstyled overlay-items">
@@ -288,7 +288,7 @@
                         <a href="#!"
                             class="d-block rounded-3 bg-body text-reset position-relative overflow-hidden card-hover hover-lift-lg hover-shadow">
                             <div class="overflow-hidden bg-gradient-light position-relative">
-                                <img src="assets/Fotos/_CHR6309-Mejorado-NR.jpg" alt="" class="img-fluid img-zoom">
+                                <img src="assets/img/_CHR6309-Mejorado-NR.jpg" alt="" class="img-fluid img-zoom">
                                 <div
                                     class="card-overlay py-4 px-3 text-white d-flex align-items-end justify-content-center">
                                     <ul class="list-unstyled overlay-items">
@@ -311,7 +311,7 @@
                         <a href="#!"
                             class="d-block rounded-3 bg-body text-reset position-relative overflow-hidden card-hover hover-lift-lg hover-shadow">
                             <div class="overflow-hidden bg-gradient-light position-relative">
-                                <img src="assets/Fotos/_CHR6318-Mejorado-NR.jpg" alt="" class="img-fluid img-zoom">
+                                <img src="assets/img/_CHR6318-Mejorado-NR.jpg" alt="" class="img-fluid img-zoom">
                                 <div
                                     class="card-overlay py-4 px-3 text-white d-flex align-items-end justify-content-center">
                                     <ul class="list-unstyled overlay-items">
@@ -335,7 +335,7 @@
                         <a href="#!"
                             class="d-block rounded-3 bg-body text-reset position-relative overflow-hidden card-hover hover-lift-lg hover-shadow">
                             <div class="overflow-hidden bg-gradient-light position-relative">
-                                <img src="assets/Fotos/_CHR6391-Mejorado-NR.jpg" alt="" class="img-fluid img-zoom">
+                                <img src="assets/img/_CHR6391-Mejorado-NR.jpg" alt="" class="img-fluid img-zoom">
                                 <div
                                     class="card-overlay py-4 px-3 text-white d-flex align-items-end justify-content-center">
                                     <ul class="list-unstyled overlay-items">
@@ -480,7 +480,7 @@
                                         <div class="col-md-4">
                                             <div
                                                 class="d-flex flex-column border-end-md align-items-center justify-content-center h-100">
-                                                <img src="assets/Fotos/_CHR6546-Mejorado-NR.jpg" alt=""
+                                                <img src="assets/img/_CHR6546-Mejorado-NR.jpg" alt=""
                                                     class="w-100 h-100 object-fit-cover">
                                             </div>
                                         </div>
@@ -517,7 +517,7 @@
                                         <div class="col-md-4">
                                             <div
                                                 class="d-flex flex-column border-end-md align-items-center justify-content-center h-100">
-                                                <img src="assets/Fotos/_CHR6261-Mejorado-NR.jpg" alt=""
+                                                <img src="assets/img/_CHR6261-Mejorado-NR.jpg" alt=""
                                                     class="w-100 h-100 object-fit-cover">
                                             </div>
                                         </div>
@@ -731,7 +731,7 @@
                                         <div class="col-md-4">
                                             <div
                                                 class="d-flex flex-column border-end-md align-items-center justify-content-center h-100">
-                                                <img src="assets/Fotos/_CHR6314-Mejorado-NR.jpg" alt=""
+                                                <img src="assets/img/_CHR6314-Mejorado-NR.jpg" alt=""
                                                     class="w-100 h-100 object-fit-cover">
                                             </div>
                                         </div>
@@ -767,7 +767,7 @@
                                         <div class="col-md-4">
                                             <div
                                                 class="d-flex flex-column border-end-md align-items-center justify-content-center h-100">
-                                                <img src="assets/Fotos/_CHR6467-Mejorado-NR.jpg" alt=""
+                                                <img src="assets/img/_CHR6467-Mejorado-NR.jpg" alt=""
                                                     class="w-100 h-100 object-fit-cover">
                                             </div>
                                         </div>
@@ -802,7 +802,7 @@
                                         <div class="col-md-4">
                                             <div
                                                 class="d-flex flex-column border-end-md align-items-center justify-content-center h-100">
-                                                <img src="assets/Fotos/_CHR6560-Mejorado-NR.jpg" alt=""
+                                                <img src="assets/img/_CHR6560-Mejorado-NR.jpg" alt=""
                                                     class="w-100 h-100 object-fit-cover">
                                             </div>
                                         </div>
