--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
         <nav class="navbar navbar-expand-lg navbar-light navbar-link-white">
             <div class="container position-relative">
                 <a class="navbar-brand" href="index.html">
-                    <img src="assets/Logo/LOGO NEGRO.png" alt="" class="img-fluid navbar-brand-sticky">
-                    <img src="assets/Logo/LOGO NARANJA.png" alt="" class="img-fluid navbar-brand-transparent">
+                    <img src="assets/logo/LOGO NEGRO.png" alt="" class="img-fluid navbar-brand-sticky">
+                    <img src="assets/logo/LOGO NARANJA.png" alt="" class="img-fluid navbar-brand-transparent">
                 </a>
                 <div class="d-flex align-items-center navbar-no-collapse-items order-lg-last">
                     <button class="navbar-toggler order-last" type="button" data-bs-toggle="collapse"
